Update gemfile.lock for heroku

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,18 +1,26 @@
 <div class="main posts-show">
   <div class="container">
     <div class="posts-show-item">
-    <div class="post-content">
+      <div class="post-user-name">
+        <!-- ユーザーの画像が表示されるように、以下のsrcの中を埋めてください -->
+        <img src="<%= "/user_images/#{@user.image_name}" %>">
+        <!-- link_toメソッドを用いて、ユーザー詳細ページへのリンクを作成してください -->
+        <%= link_to(@user.name,"/users/#{@user.id}") %>
+      </div>    
+      <div class="post-content">
         <p>
             <%= @post.content %>
         </p>
+      </div>
     </div> 
     <div class="post-time">
         <p>
-            <%= @post.created_at%>
+            <%= @post.created_at %>
+        </p>
     </div>
     <div class="post-menus">
-    <%= link_to('編集',"/posts/#{@post.id}/edit") %>
-    <%= link_to('削除',"/posts/#{@post.id}/destroy",{method:"post"}) %>
+      <%= link_to('編集',"/posts/#{@post.id}/edit") %>
+      <%= link_to('削除',"/posts/#{@post.id}/destroy",{method:"post"}) %>
     </div>
   </div>
 </div>
