--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,29 +12,53 @@
   <body>
   <header>
   <div class="header-logo">
+    <% if @current_user %>
+      <%= link_to("Travelist","/posts/index") %>
+    <% else %>
       <%= link_to("Travelist","/") %>
+    <% end %>
   </div>
   <ul class="header-menus">
-    <li>
-      <%= link_to("Travelistとは","/about") %>
-    </li>
-     <li>
-      <%= link_to("投稿一覧", "/posts/index") %>
-    </li>
-    <li>
-      <%= link_to("投稿する","/posts/new") %>
-    </li>
-    <li>
-      <%= link_to("ユーザー一覧","/users/index") %>
-    </li>
-    <li>
-      <%= link_to("新規登録","/signup") %>
-    </li>
-    <li>
-      <%= link_to("ログイン", "/login") %>
-    </li>
-  </ul>
+      <% if @current_user %>
+        <li>
+          <%= link_to(@current_user.name,"/users/#{@current_user.id}") %>
+          さん
+        </li>
+        <li>
+          <%= link_to("Travelistとは","/about") %>
+        </li>
+        <li>
+          <%= link_to("投稿一覧", "/posts/index") %>
+        </li>
+        <li>
+          <%= link_to("投稿する","/posts/new") %>
+        </li>
+        <li>
+          <%= link_to("ユーザー一覧","/users/index") %>
+        </li>
+        <li>
+          <%= link_to("ログアウト", "/logout",{method: :post}) %>
+        </li>
+        <li>
+          <%= link_to("管理者", "/db/index") %>
+        </li>
+      <% else %>
+        <li>
+          <%= link_to("Travelistとは","/about") %>
+        </li>
+        <li>
+          <%= link_to("新規登録","/signup") %>
+        </li>
+        <li>
+          <%= link_to("ログイン", "/login") %>
+        </li>
+        <li>
+          <%= link_to("管理者", "/db/index") %>
+        </li>
+      <% end %>
+    </ul>
   </header>
+
   <% if flash[:notice] %>
   <div class ="flash">
   <%= flash[:notice] %>
