--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,6 +15,8 @@
         <p>メールアドレス</p>
         <!-- <input>タグを用いて1行の入力フォームを作成してください -->
         <input name="email">
+        <p>パスワード</p>
+        <input name="pass" value="<%= @user.password %>">
         <input type="submit" value="新規登録">
       <% end %>
 
