--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
           <%= link_to("ログアウト", "/logout",{method: :post}) %>
         </li>
         <li>
-          <%= link_to("管理者", "/db/index") %>
+          <%= link_to("管理者ログイン", "/db/index") %>
         </li>
       <% else %>
         <li>
@@ -53,7 +53,7 @@
           <%= link_to("ログイン", "/login") %>
         </li>
         <li>
-          <%= link_to("管理者", "/db/index") %>
+          <%= link_to("管理者ログイン", "/db/index") %>
         </li>
       <% end %>
     </ul>
